<resources>
    <string name="app_name">SwenHealth</string>
    <string name="book_consultations">“Book consultations with our top doctors near\n you—fast, easy, and hassle-free!”</string>
    <string name="book_an_ambulance_description">“Book an ambulance with ease, anytime you need urgent \nmedical help. Fast response and reliable \nservice at your doorstep.”</string>
    <string name="dummy_description">"Apollo Hospital offers world-class healthcare services with a team of highly skilled doctors and state-of-the-art facilities. From general medicine to specialized treatments, you can trust us for comprehensive care. Our hospital is committed to providing affordable, quality medical services. With our health card, enjoy exclusive discounts on consultations, diagnostics, and more."</string>
    <string name="terms_and_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="patient_contact_number">Patient’s Contact Number</string>
    <string name="you_will_receive_call">You will receive the call on this number</string>
    <string name="patient_name">Patient Name</string>
    <string name="contact_us">Contact Us</string>
    <string name="confirm_booking">Confirm Booking</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tests_text"><u>Includes 82 tests</u></string>
    <string name="name">Name<font fgcolor='#FF0000'>*</font></string>
    <string name="contact_number">Contact Number<font fgcolor='#FF0000'>*</font></string>
    <string name="dob">Date of Birth<font fgcolor='#FF0000'>*</font></string>
    <string name="dates_are_not_available">Dates are Not Available</string>
    <string name="morning_slots_not_available">Morning Slots are Not Available</string>
    <string name="afternoon_slots_not_available">Afternoon Slots are Not Available</string>
    <string name="evening_slots_not_available">Evening Slots are Not Available</string>
    <string name="morning">Morning</string>
    <string name="evening">Evening</string>
    <string name="afternoon">Afternoon</string>
    <string name="total_charges">Total Charges</string>
    <string name="coupon_discount">Coupon Discount</string>
    <string name="consultation_fees">Consultation Fees</string>
    <string name="pay_now">Pay Now</string>
    <string name="please_provide_a_prescription_for_the_medications_listed_above">Please provide a prescription for the medications listed above</string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="add_family_members">Add Family Members</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email_id">Enter Email Id</string>
    <string name="select_date_of_birth">Select Date of Birth</string>
    <string name="add_family_member">Add Family Member</string>
    <string name="continue1">Continue</string>
    <string name="add_patient_details">Add Patient Details</string>
    <string name="choose_family_member">Choose Family Member</string>
    <string name="confirm">Confirm</string>
    <string name="add_document">Add Document</string>
    <string name="document_name">Document Name</string>
    <string name="enter_document_name">Enter Document Name</string>
    <string name="upload_documents">Upload Documents</string>
    <string name="gallery">Gallery</string>
    <string name="pdf">PDF</string>
    <string name="upload">Upload</string>
    <string name="treatment_planning">Treatment Planning</string>
    <string name="treatment_name">Treatment Name</string>
    <string name="enter">Enter</string>
    <string name="remainder">Reminder</string>
    <string name="add_date">Add Date</string>
    <string name="add_address">Add Address</string>
    <string name="address">Address</string>
    <string name="select_address">Select Address</string>
    <string name="address_type">Address Type</string>
    <string name="house_no">House No. &amp; Floor</string>
    <string name="building_no">Building &amp; Block No (Optional)</string>
    <string name="landmark_area">Landmark &amp; Area Name (Optional)</string>
    <string name="home_date_and_time">Home Visit Time &amp; Date</string>
    <string name="add_new_address">Add New Address</string>
    <string name="air_ambulance">Air Ambulance</string>
    <string name="ambulance_booking">Ambulance Booking</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="change">Change</string>
    <string name="name1">Name</string>
    <string name="email_id">Email Id</string>
    <string name="phone_number">Phone Number</string>
    <string name="message">Message</string>
    <string name="or">Or</string>
    <string name="you_can_order_via">YOU CAN ORDER VIA</string>
    <string name="prescription">Prescription</string>
    <string name="all_health_packages">All Health Packages</string>
    <string name="search_here">Search Here</string>
    <string name="top_diagnostics">Top diagnostic centers near you, offering fast and reliable results</string>
    <string name="booking_details">Booking Details</string>
    <string name="order_status">Order Status</string>
    <string name="slot_details">Slot Details</string>
    <string name="added_lab_tests">Added Lab Tests</string>
    <string name="view">View</string>
    <string name="bill_summary">Bill Summary</string>
    <string name="item_total">Item total</string>
    <string name="total_discount">Total discount</string>
    <string name="total_amount">Total Amount</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="patient_details">Patient Details</string>
    <string name="sample_collection_location">Sample Collection Location</string>
    <string name="need_help">Need Help?</string>
    <string name="cart">Cart</string>
    <string name="prescription_order">Prescription Order</string>
    <string name="diagnostic_address">Diagnostic Address</string>
    <string name="recipient_details">Recipient details</string>
    <string name="recipient_name">Recipient’s Name</string>
    <string name="select_time_slot">Select Time Slot</string>
    <string name="upload_a_prescription">Upload a Prescription</string>
    <string name="select_date">Select Date</string>
    <string name="continue_booking">Continue Booking</string>
    <string name="doctors_profile">Doctor’s Profile</string>
    <string name="about_doctor">About Doctor</string>
    <string name="education">Education</string>
    <string name="registration">Registration</string>
    <string name="online_consult_fee">Online Consult Fee</string>
    <string name="online_consult">Online Consult</string>
    <string name="hospital_visit">Hospital Visit</string>
    <string name="hospital_visit_fee">Hospital Visit Fee</string>
    <string name="summary">Summary</string>
    <string name="offers_and_discounts">Offers and Discounts</string>
    <string name="apply_coupon_code">Apply Coupon Code</string>
    <string name="select">Select</string>
    <string name="book_online_consult">Book Online Consult</string>
    <string name="showing_top_doctors_available">Showing top doctors available</string>
    <string name="home">Home</string>
    <string name="hospitals">Hospitals</string>
    <string name="medicines">Medicines</string>
    <string name="lab_tests">Lab Tests</string>
    <string name="diagnostic">Diagnostic</string>
    <string name="public_relation_details">Public Relation Details</string>
    <string name="date_of_birth1">Date Of Birth</string>
    <string name="hospital_admission">Hospital Admission</string>
    <string name="bookings">Bookings</string>
    <string name="completed">Completed</string>
    <string name="ambulance_details">Ambulance Details</string>
    <string name="ambulance_registration_number">Ambulance Registration Number</string>
    <string name="driver_details">Driver Details</string>
    <string name="ambulance_driver">Ambulance Driver</string>
    <string name="your_pick_up_location">Your Pick Up Location</string>
    <string name="your_details">Your Details</string>
    <string name="call_driver">Call Driver</string>
    <string name="track_ambulance">Track Ambulance</string>
    <string name="hospital_ambulance_bookings">Hospital Ambulance Bookings</string>
    <string name="hospital_booking">Hospital Booking</string>
    <string name="timings">Timings</string>
    <string name="location">Location</string>
    <string name="admit">Admit</string>
    <string name="hospital_medicine_bookings">Hospital Medicine Bookings</string>
    <string name="on_going_orders">On going Orders</string>
    <string name="completed_orders">Completed Orders</string>
    <string name="select_time_slot_for_admit">Select Time Slot for Admit</string>
    <string name="showing_top_hospitals_near_you">Showing Top Hospitals Near You</string>
    <string name="lab_test_bookings">Lab Tests Bookings</string>
    <string name="upcoming_lab_tests">upcoming lab tests</string>
    <string name="top_labs_offering">Top Labs Offering Convenient Home Visits for Your Health Needs</string>
    <string name="confirm_your_location">Confirm your location</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="phone">Phone</string>
    <string name="by_continuing">By continuing, you agree to our <font color="#1F52A5">Terms &amp; Conditions</font></string>
    <string name="med_locker">Med Locker</string>
    <string name="notifications">Notifications</string>
    <string name="offers_coupons">Offers/Coupons</string>
    <string name="online_doctor">Online Doctor</string>
    <string name="search">Search</string>
    <string name="top_speciality">Top Speciality</string>
    <string name="online_doctor_consultation">Online Doctor Consultation</string>
    <string name="online_consultation">Online Consultation</string>
    <string name="enter_4_digit">Enter the 4-digital OTP to</string>
    <string name="did_not_receive_the_code">Didn’t receive the code?</string>
    <string name="resend">Resend</string>
    <string name="categories">Categories</string>
    <string name="book_medicine">Book Medicine</string>
    <string name="attach_prescription">Attach Prescription</string>
    <string name="please_upload_valid_prescription">Please upload images of valid prescription from your doctor.</string>
    <string name="camera">Camera</string>
    <string name="view_cart">View Cart</string>
    <string name="coupon">Coupon</string>
    <string name="incoming_call">Incoming Call</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="skip">Skip</string>
    <string name="share_app">Share App</string>
    <string name="tap_to_copy_link">Tap to copy link</string>
    <string name="access_all_your_healthcare_needs">Access all your healthcare needs in one app – book doctor consultations,  hospital admissions, lab tests, and pharmacy services easily. Enjoy  seamless online and offline access to top hospitals, exclusive discounts,  and personalized care, all in one affordable subscription</string>
    <string name="all_in_one_healthcare_booking_app">All-in-one healthcare booking app</string>
    <string name="your_payment_has_been_confirmed">Your Payment has been Confirmed</string>
    <string name="add_plan">Add Plan</string>
    <string name="view_prescription">View Prescription</string>
    <string name="wallet">Wallet</string>
    <string name="available_wallet_amount">Available Wallet Amount</string>
    <string name="enter_amount_to_recharge_your_wallet">Enter amount to recharge your wallet</string>
    <string name="you_can_also_choose">You can also choose </string>
    <string name="wallet_history">Wallet History</string>
    <string name="lets_get_started">Let’s get started!</string>
    <string name="add_your_family_member">Add Your Family Members</string>
    <string name="make_default_address">Make Default Address</string>
</resources>